# diopside

./: .gitignore  .gitmessage  .prototools  BUGFIX_SUMMARY.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  Taskfile.yaml  cdk.json  install-task.sh  moon.yml  pyproject.toml  tag_analysis_table.csv  tag_hierarchy_algorithm.md  tag_normalization_rules.md  uv.md  videos_without_game_tags.md
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy.yml
.moon/: tasks.yml  workspace.yml
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py  video.py
backend/app/routers/: videos.py
backend/app/services/: __init__.py  dynamodb_service.py
backend/tests/: __init__.py  test_api.py  test_dynamodb_service.py  test_models.py
docs/: BUGFIX_SUMMARY.md  CROSS_REGION_FIX_SUMMARY.md  LAMBDA_LAYER_FIX_SUMMARY.md  README.md  REFACTOR_SUMMARY.md  architecture.md  contributing.md  deployment.md
docs/design/: api-reference.md  architecture.md  design-specification.md  madr-001-fuzzy-search-alternative.md  madr-001-fuzzy-search-implementation-final.md  madr-001-fuzzy-search-implementation.md  madr-002-akinator-style-video-recommendation.md  tag-hierarchy-design.md  tag-hierarchy-requirements.md  tag_rule.md  ui-ux-design-specification.md
docs/development/: coding-standards.md  commit-guidelines.md  contributing.md  review-checklist.md  testing-guide.md
docs/operations/: deployment.md  monitoring.md  troubleshooting.md
docs/specs/: README.md  main-screen.md  memory-game-screen.md  random-video-screen.md  tag-search-screen.md  thumbnail-museum-screen.md  video-detail-screen.md
docs/user-docs/: installation.md
frontend/: README.md  jest.config.js  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: api.ts
frontend/tests/e2e/: accessibility.spec.ts  api-integration.spec.ts  homepage.spec.ts  memory-game.spec.ts
infrastructure/: .gitignore  DEPLOYMENT.md  README.md  Taskfile.yaml  app.py  app_v2.py  cdk.json  main.py  pyproject.toml  requirements.txt
infrastructure/.github/workflows/: ci.yml
infrastructure/construct/: __init__.py  api.py  cloudfront.py  function.py  storage.py  waf.py
infrastructure/constructs/: api.py  cloudfront.py  function.py  storage.py  waf.py
infrastructure/stacks/: base_stack.py  constructs.py  dev_stack.py  main_stack.py  prod_stack.py  waf_stack.py  waf_stack_v2.py
infrastructure/tests/: test_stacks.py
metadata/: 20191130-133326#qp-w9AZJuLs.json  20191201-133506#HZjqqTXtiWY.json  20191202-135219#WhvpVORlK70.json  20191204-164305#xxKsAnasZsE.json  20191205-172025#fTXY_RGUIa4.json  20191206-180415#1iPfH484bik.json  20191207-153640#SBRVmeQYa00.json  20191208-192224#HaBcuXTgmGM.json  20191209-155042#K98qupo9O0w.json  20191210-143644#duLTE-RuGKw.json  20191211-140028#gE8GMc_Y_Ho.json  20191212-183258#9SA23y8IVto.json  20191213-152210#CtYulq8jD5k.json  20191216-164506#YvCVE6ePIS4.json  20191217-145700#41fTtvCFeT0.json  20191219-130331#E-GYLUX6R98.json  20191220-203248#1b6nzOC_pIk.json  20191221-114633#2N511BhfM_o.json  20191223-161051#CcyyagbW8ak.json  20191224-171406#kUsadeaFJiw.json  20191225-152801#os2LX6aFxZk.json  20191227-154103#CktRLVtCaAc.json  20191230-153914#jmnxW7LVYd0.json  20191231-070653#UXaaHUqytz4.json  20191231-150034#r6c_wuWHwrk.json  20200104-172051#17KxHbMGPgg.json  20200105-171154#IfFQdhX6FgY.json  20200106-170651#IWsgvbVwwY4.json  20200109-154517#BPAkApnWCtE.json  20200110-154507#pPuuXBQmTCk.json  20200112-151820#daI14pAv2-c.json  20200113-160511#QHtKK0zc6DM.json  20200115-152848#as9y5xr7jL4.json  20200116-164705#RXxidZcRF8g.json  20200117-193109#9MvgDp99I30.json  20200120-124553#cBHgeutrLx8.json  20200121-131449#uZLDJVUtyEY.json  20200122-194253#o6ojC_pGyKY.json  20200123-113412#GSVTTQ1bAis.json  20200124-161711#CxotviKb1M0.json  (+1135 more)
package/api/: main.py  moon.yml  pyproject.toml  pytest.ini
package/api/app/: main.py
package/api/app/models/: video.py
package/api/app/routers/: __init__.py  tag_hierarchy.py  videos.py
package/api/app/services/: dynamodb_service.py  tag_hierarchy_service.py
package/api/tests/: conftest.py  test_api.py  test_models.py  test_services.py  test_utils.py
package/api/tests/integration/: test_tag_hierarchy_api.py
package/api/tests/unit/: test_tag_hierarchy_service.py
package/infra/: app.py  moon.yml  pyproject.toml
package/infra/package/api/app/: main.py
package/infra/package/infra/src/cloudfront-functions/: directory-index.js
package/infra/src/cloudfront-functions/: directory-index.js
package/infra/src/construct/: backend.py  frontend.py
package/infra/src/construct/resource/: bucket.py  function.py  rest_api.py  table.py  waf.py
package/infra/src/model/: env.py  project.py
package/infra/src/stack/: app_stack.py  backend_stack.py  frontend_stack.py  waf_stack.py
package/infra/tests/: test_app_stack_assertions.py  test_app_stack_snapshot.py  test_cloudfront_function.py
package/scripts/: moon.yml  pyproject.toml  pytest.ini
package/scripts/src/: compute_similarity.py  fetch_chat_vectors.py  import_chat_data_to_dynamodb.py  import_json_to_dynamodb.py
package/scripts/tests/: conftest.py  test_cloudformation_helper.py  test_compute_similarity.py  test_fetch_chat_vectors.py  test_import_chat_data_to_dynamodb.py  test_json_to_dynamodb_importer.py  test_main.py
package/web/: README.md  jest.config.js  jest.setup.js  moon.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts
package/web/public/: config.json
specs/: README.md  improvement-roadmap.md
work/: collected_tags.json  files_without_major_tags.txt  game_tag_check_results.json  game_videos_without_csv_tags_result.txt  metadata_files.txt  tags_only.json  unclear_collaboration_streams.txt  unique_hashtags.txt  videos_with_hashtags.csv  videos_with_hashtags.json
(+73 files in other folders)
