[project]
name = "diopside-scripts"
version = "0.1.0"
description = "Utility scripts for Diopside"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.36",
]

[dependency-groups]
dev = [
    "boto3-stubs[dynamodb]>=1.38.36",
    "ruff>=0.11.13",
    "mypy>=1.16.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F401", # unused-import
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
