[project]
name = "diopside-scripts"
version = "0.1.0"
description = "Utility scripts for Diopside"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.36",
    "python-dateutil>=2.8.2",
    "boto3-stubs[dynamodb]>=1.38.36",
    "types-python-dateutil>=2.8.19",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F401", # unused-import
]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
exclude = ["tests/"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
]
